# pavero_test_ds39

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  container.py  main.py
src/db/: core.py  models.py
src/infra/: repositories.py  schemas.py  services.py
src/infra/api/: dependencies.py  endpoints.py
src/infra/oauth/: yandex.py
src/migrations/: env.py
src/migrations/versions/: b3627babe6c7_database.py
