[tool.poetry]
name = "pavero-test-ds39"
version = "0.1.0"
description = ""
authors = ["Dmitriy <freedev39@gmail.com>"]
readme = "README.md"
packages = [{include = "pavero_test_ds39"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.40"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
pydantic-settings = "^2.8.1"
aiosqlite = "^0.21.0"
punq = "^0.7.0"
greenlet = "^3.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
